--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ a:hover{color:var(--accent3)}
 
 .fade-in{opacity:0;transform:translateY(30px);transition:opacity .6s ease,transform .6s ease}
 .fade-in.visible{opacity:1;transform:translateY(0)}
+.hero .fade-in{opacity:1;transform:none}
 
 /* ========== NAV ========== */
 nav{position:fixed;top:0;left:0;right:0;z-index:1000;padding:16px 0;transition:all .3s ease;backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px)}
@@ -1692,6 +1693,8 @@ document.addEventListener('DOMContentLoaded',()=>{
   renderTemplates();
   renderMistakes();
   initObserver();
+  // Fallback: force all fade-ins visible after 2s if observer fails
+  setTimeout(()=>{document.querySelectorAll('.fade-in').forEach(el=>el.classList.add('visible'))},2000);
 });
 </script>
 </body>
