Fix: disable fade-in animations - all content visible immediately

--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@ a:hover{color:var(--accent3)}
 
 .badge{display:inline-flex;align-items:center;padding:4px 12px;border-radius:20px;font-size:.75rem;font-weight:600;letter-spacing:.02em}
 
-.fade-in{opacity:0;transform:translateY(30px);transition:opacity .6s ease,transform .6s ease}
-.fade-in.visible{opacity:1;transform:translateY(0)}
-.hero .fade-in{opacity:1;transform:none}
+.fade-in{opacity:1;transform:none}
+.fade-in.visible{opacity:1;transform:none}
 
 /* ========== NAV ========== */
 nav{position:fixed;top:0;left:0;right:0;z-index:1000;padding:16px 0;transition:all .3s ease;backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px)}
